feat: add api to get all submitters in controller (#35)
* feat: add api to get all submitters in controller

* feat: get submitter list

* feat: add test for get submitters
