# backend-controller/src/main/kotlin/org/rucca/snake/controller/api/SubmittersApi.kt
@@ -1,0 +1,49 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech)
+ * (7.11.0). https://openapi-generator.tech Do not edit the class manually.
+ */
+package org.rucca.snake.controller.api
+
+import io.swagger.v3.oas.annotations.*
+import io.swagger.v3.oas.annotations.enums.*
+import io.swagger.v3.oas.annotations.media.*
+import io.swagger.v3.oas.annotations.responses.*
+import io.swagger.v3.oas.annotations.security.*
+import org.rucca.snake.controller.model.SubmittersGet200ResponseDTO
+import org.springframework.http.HttpStatus
+import org.springframework.http.ResponseEntity
+import org.springframework.validation.annotation.Validated
+import org.springframework.web.bind.annotation.*
+
+@RestController
+@Validated
+interface SubmittersApi {
+
+    @Operation(
+        tags = ["default"],
+        summary = "Get all submitters",
+        operationId = "submittersGet",
+        description = """""",
+        responses =
+            [
+                ApiResponse(
+                    responseCode = "200",
+                    description = "Successfully retrieved all submitters",
+                    content =
+                        [
+                            Content(
+                                schema = Schema(implementation = SubmittersGet200ResponseDTO::class)
+                            )
+                        ],
+                )
+            ],
+    )
+    @RequestMapping(
+        method = [RequestMethod.GET],
+        value = ["/submitters"],
+        produces = ["application/json"],
+    )
+    fun submittersGet(): ResponseEntity<SubmittersGet200ResponseDTO> {
+        return ResponseEntity(HttpStatus.NOT_IMPLEMENTED)
+    }
+}
